Fix appearance on mobile

--- a/_assets/stylesheets/modules/header.scss
+++ b/_assets/stylesheets/modules/header.scss
@@ -77,6 +77,7 @@ nav {
       height: calc(0.3 * #{$letter-width});
       margin: calc(0.35 * #{$letter-width}) 0;
       width: 100px;
+      max-width: 25%;
       
       a {
         &:active {
@@ -105,16 +106,20 @@ nav {
     &.sub-menu-active {
       > li {
         opacity: 0;
-        visibility: none;
         width: 0;
         transition: opacity $delay, width $delay ease-in-out $delay;
         
         &.active {
           transition: width $delay ease-in-out $delay;
-          width: 100px;
+          width: 35px;
           opacity: 1;
           
+          @media #{$medium-up} {
+            width: 100px;
+          }
+          
           .nav-menu-item-text {
+            opacity: 0;
             max-width: 0;
           }
         
@@ -143,6 +148,7 @@ nav {
       width: 100px;
       text-align: center;
       display: inline-block;
+      max-width: 32%;
     }
     
     &.active {
